<resources>
    <string name="app_name">MPK Mobile</string>

    <!-- COMMON -->
    <string name="choose">Wybierz</string>
    <string name="search">Szukaj</string>
    <string name="add">Dodaj</string>
    <string name="list">Lista</string>
    <string name="map">Mapa</string>

    <!-- CHOOSE FRAGMENT -->
    <string name="choose_route">Wyznacz trasę</string>
    <string name="shedules">Rozkłady</string>

    <!-- CHOOSE ROUTE FRAGMENT -->
    <string name="choose_start">Wybierz punkt startowy</string>
    <string name="choose_destination">Wybierz punkt docelowy</string>

    <!-- PROGRESS -->
    <string name="downloading">Pobieranie…</string>
    <string name="progress_loading">Ładowanie…</string>

    <!-- PROBLEMS -->
    <string name="network_failed">Brak połączenia z internetem</string>
    <string name="field_required">To pole jest wymagane</string>

</resources>
