<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".StartActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="45sp"
        android:textColor="@color/grey_dark" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/choose_route"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/button_choose_route"
                android:gravity="center"
                android:alpha="0.8"
                android:text="@string/choose_route"
                android:textSize="16sp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/shedules"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_shedules"
                android:gravity="center"
                android:alpha="0.8"
                android:text="@string/shedules"
                android:textSize="12sp"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
